// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`E2E Generates the correct event data for a Messenger Rooms Online event 1`] = `
{
  "description": "Description with json chars { woohoo hope this doesnt screw anything up ] [ ",
  "endTimestamp": null,
  "formattedDate": "Thursday, May 11, 2023 at 2:00 PM UTC-06",
  "hosts": [
    {
      "id": "pfbid0bGuAF5VRG3Azhcy3JUidKRgSMLco4iCTkspQnbmKVVo27ARnJJQrMUPTep4uFEMjl",
      "name": "Joe Smith",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t1.30497-1/143086968_2856368904622192_1959732218791162458_n.png?stp=cp0_dst-png_p40x40&_nc_cat=1&ccb=1-7&_nc_sid=2b6aad&_nc_ohc=CO5dz350V7MAX8i0KzV&_nc_ht=scontent-sjc3-1.xx&oh=00_AfD_xDy9YaWFINwTUZn2knsJ6Bop--w4jXw-4cYGZoL5_g&oe=65ADA0F8",
      },
      "type": "User",
      "url": "https://www.facebook.com/people/Joe-Smith/pfbid0bGuAF5VRG3Azhcy3JUidKRgSMLco4iCTkspQnbmKVVo27ARnJJQrMUPTep4uFEMjl/",
    },
  ],
  "id": "564972362099646",
  "isOnline": true,
  "location": null,
  "name": "msgner rooms live event with " in name",
  "onlineDetails": {
    "type": "MESSENGER_ROOM",
    "url": null,
  },
  "photo": null,
  "startTimestamp": 1683838800,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/564972362099646/",
  "usersResponded": 2,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for a concert with multiple hosts & location info 1`] = `
{
  "description": "Ticket includes admission to Stampede Park

Sale Dates and Times:

Public Onsale : Fri, 24 Mar 2023 at 10:00 AM

Media Presale : Wed, 22 Mar 2023 at 10:00 AM

Stampede Insider Presale : Wed, 22 Mar 2023 at 10:00 AM

Saddledome Insider Presale : Wed, 22 Mar 2023 at 10:00 AM

Alberta Music Presale : Wed, 22 Mar 2023 at 10:00 AM

Better Business Bureau Presale : Wed, 22 Mar 2023 at 10:00 AM

Country Music Alberta Presale : Wed, 22 Mar 2023 at 10:00 AM

Artist Presale : Wed, 22 Mar 2023 at 10:00 AM

Venue Presale : Wed, 22 Mar 2023 at 10:00 AM

Calgary Flames Club Seats : Wed, 22 Mar 2023 at 10:00 AM

Calgary Flames Club Seat : Wed, 22 Mar 2023 at 12:00 PM

CSEC Insiders : Thu, 23 Mar 2023 at 10:00 AM

Aisle Seat Offer Presale : Wed, 22 Mar 2023 at 10:00 AM

Aisle Seat Offer Onsale : Fri, 24 Mar 2023 at 10:00 AM
",
  "endTimestamp": null,
  "formattedDate": "Friday, July 7, 2023 at 6:30 PM MDT",
  "hosts": [
    {
      "id": "100068207392255",
      "name": "Scotiabank Saddledome",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/281352750_2028415974017689_9212573442765953743_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=109&ccb=1-7&_nc_sid=596444&_nc_ohc=lImsl-L78xkAX-GA4Dd&_nc_ht=scontent-sjc3-1.xx&oh=00_AfArzY_bzU5S5QYaAfflUO8Ev4HpUtSzm6V4uzvJ3SqwiA&oe=658B478B",
      },
      "type": "User",
      "url": "https://www.facebook.com/scotiabanksaddledome",
    },
    {
      "id": "100064516969267",
      "name": "Calgary Stampede",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/352087888_1034380311273324_7910170983351471836_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=108&ccb=1-7&_nc_sid=596444&_nc_ohc=gL6qwT24Mp0AX9ryMz7&_nc_ht=scontent-sjc3-1.xx&oh=00_AfAu_QtEo3ngmuKeXVJ4YUnwsMYNZse9lZYfV__fJL1kbA&oe=658B9C6B",
      },
      "type": "User",
      "url": "https://www.facebook.com/calgarystampede",
    },
    {
      "id": "100063699336240",
      "name": "Stampede Ent. Inc.",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/294695496_453263513473623_3023392462933132753_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=101&ccb=1-7&_nc_sid=596444&_nc_ohc=ko17SulDWsQAX9eZSS3&_nc_ht=scontent-sjc3-1.xx&oh=00_AfCF_yLtuKYEPHucFjzmwLySL5Dk0XqTC2OtYkhdhy7iOg&oe=658A6B42",
      },
      "type": "User",
      "url": "https://www.facebook.com/StampedeEntInc",
    },
    {
      "id": "100044535845092",
      "name": "Pitbull",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/385779974_903914224436431_2458871289190723822_n.jpg?stp=cp6_dst-jpg_p40x40&_nc_cat=1&ccb=1-7&_nc_sid=596444&_nc_ohc=E9QynNW8D8UAX_aDMsc&_nc_ht=scontent-sjc3-1.xx&oh=00_AfA2vh9RwQtVKHb4vrqa2A0bZGaDMWS6B-vXTuSndf40yg&oe=658B0731",
      },
      "type": "User",
      "url": "https://www.facebook.com/pitbull",
    },
  ],
  "id": "602005831971873",
  "isOnline": false,
  "location": {
    "address": "555 Saddledome Rise S.E.",
    "city": {
      "id": "111983945494775",
      "name": "Calgary, AB",
    },
    "coordinates": {
      "latitude": 51.037418735623,
      "longitude": -114.05197173357,
    },
    "countryCode": "CA",
    "description": "The Scotiabank Saddledome is Calgary's premier sports and entertainment venue.",
    "id": "426321674227135",
    "name": "Scotiabank Saddledome",
    "type": "PLACE",
    "url": "https://facebook.com/scotiabanksaddledome",
  },
  "name": "Pitbull with Special Guest Reve",
  "onlineDetails": null,
  "photo": {
    "id": "10160954790708641",
    "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-6/336792249_949153626262984_8332769163095794984_n.jpg?stp=dst-jpg_p180x540&_nc_cat=103&ccb=1-7&_nc_sid=d8d9c5&_nc_ohc=pjC8nDFR_HMAX9YDjRZ&_nc_ht=scontent-sjc3-1.xx&oh=00_AfCIV0Z2smqNXiyZIM81MEAmf7BoW-L2DxDcC4xronXloA&oe=658A452D",
    "url": "https://www.facebook.com/Ticketmaster/photos/gm.602005851971871/10160954790708641/",
  },
  "startTimestamp": 1688779800,
  "ticketUrl": null,
  "timezone": "MDT",
  "url": "https://www.facebook.com/events/602005831971873/",
  "usersResponded": 1562,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for a event with an end date & multiple dates 1`] = `
{
  "description": "Christ is RISEN! Let's celebrate!

We might know the Easter story, but does it mean anything for us today? 

Come experience and celebrate what Easter offers, April 8/9 at FAC! 

Expect a 75-minute service filled with worship music, creative elements, and a message of hope from the Bible.

**Please note special service times: Saturday at 6:30 pm, Sunday at 9:15 & 11:15 am**

More info: https://www.faccalgary.com/easter",
  "endTimestamp": 1681065000,
  "formattedDate": "Sunday, April 9, 2023 at 10:15 AM – 11:30 AM UTC-06",
  "hosts": [
    {
      "id": "100064691376556",
      "name": "FAC Calgary",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/308800346_490298226469886_3396126836502450064_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=108&ccb=1-7&_nc_sid=596444&_nc_ohc=VEmODNVvd7cAX8-pDzU&_nc_ht=scontent-sjc3-1.xx&oh=00_AfDimcTm1W91IR_ZF0jdwy1x31yXfdKWhasnnOoGWrbWjw&oe=658B7A66",
      },
      "type": "User",
      "url": "https://www.facebook.com/faccalgary",
    },
  ],
  "id": "1137956703546266",
  "isOnline": false,
  "location": {
    "address": "12345 40 Street SE",
    "city": {
      "id": "111983945494775",
      "name": "Calgary, AB",
    },
    "coordinates": {
      "latitude": 50.937853434334,
      "longitude": -113.97362557296,
    },
    "countryCode": "CA",
    "description": "Building lives that honour God...all for Jesus! 
Official Facebook Page for First Alliance Church",
    "id": "118309434891614",
    "name": "FAC Calgary",
    "type": "PLACE",
    "url": "https://facebook.com/faccalgary",
  },
  "name": "Easter - Deerfoot & Online Campuses",
  "onlineDetails": null,
  "photo": {
    "id": "595982989234742",
    "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-6/335064084_2456887831142064_5931438962804874346_n.jpg?stp=dst-jpg_p480x480&_nc_cat=103&ccb=1-7&_nc_sid=d8d9c5&_nc_ohc=5wRbw1gXpIgAX_KlUEo&_nc_ht=scontent-sjc3-1.xx&oh=00_AfChAT9Zfalbd0toGLosEgx8gBSynkxNBiFe2_bojusUgg&oe=658A5B1A",
    "url": "https://www.facebook.com/photo/?fbid=595982989234742&set=gm.1137956736879596",
  },
  "startTimestamp": 1681060500,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/1137956700212933/?event_time_id=1137956703546266",
  "usersResponded": 20,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event hosted by Eventbrite 1`] = `
{
  "description": "Come bird  Beaverdam Flats from Refinery Park.  There will be open water and wetland areas to explore.

Come bird Refinery Park to Beaverdam Flats with Nature Calgary.   The pathway is along the river and can be slippery and icy at times. Please wear appropriate footwear.  This trip may not be suitable for all mobilities.  We welcome beginner and expert birders on our trips.
PLEASE NOTE WE WILL MEET AT PARKING LOT FOR REFINERY FLATS.
https://www.google.com/maps/place/Refinery+Park/@51.0051425,-114.019193,17z/data=!3m1!4b1!4m5!3m4!1s0x53717a7f5ddd6dd5:0x1b8647891750b9e2!8m2!3d51.0051425!4d-114.0170043
Binoculars are available to borrow for those who need them.",
  "endTimestamp": 1680543000,
  "formattedDate": "Monday, April 3, 2023 at 8:00 AM – 10:30 AM UTC-06",
  "hosts": [],
  "id": "252144510602906",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": {
      "latitude": 51.01257,
      "longitude": -114.00271,
    },
    "countryCode": "CA",
    "description": null,
    "id": "768722671166814",
    "name": "4687 Barlow Trail Southeast,Calgary,T2B 3T6,CA",
    "type": "TEXT",
    "url": null,
  },
  "name": "Nature Calgary Birding - Refinery Park to Beaverdam Flats",
  "onlineDetails": null,
  "photo": {
    "id": "10167524860335261",
    "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-6/337885002_189168827241357_2737797815564835189_n.jpg?stp=dst-jpg_p480x480&_nc_cat=107&ccb=1-7&_nc_sid=d8d9c5&_nc_ohc=HgHlEkqQmZ4AX9iA12w&_nc_ht=scontent-sjc3-1.xx&oh=00_AfAaYalQZ4ODm2OkMLJhhD5fQxA22fBM2GO914H4TXpUvA&oe=658B5EB1",
    "url": "https://www.facebook.com/EventbriteforOrganizers/photos/gm.252144523936238/10167524860335261/",
  },
  "startTimestamp": 1680534000,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/252144510602906/",
  "usersResponded": 0,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with a text address location 1`] = `
{
  "description": "This free one day event is the start up to Calgary's vibrant festival season, and encourages citizens to shake off their winter blues and reintroduce themselves to the thriving creative community in our city. 

Each spring, thousands of attendees come out to enjoy the unique and pedestrian friendly 4th Street venue, offering an array of musical talent, artisan vendors, quality entertainment and some perfect people watching. 

At the Lilac Festival, there is an activity made for all ages. This could mean a jump in the bouncer for the kids, discovering a great new band, choosing a perfect summer patio or searching for a trendy fashion; there is no shortage of things happening.",
  "endTimestamp": 1685923200,
  "formattedDate": "Sunday, June 4, 2023 at 9:00 AM – 5:00 PM UTC-06",
  "hosts": [
    {
      "id": "100050510798749",
      "name": "Lilac Festival",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/343412725_1217737712204297_6274770509266232269_n.jpg?stp=c2.1.38.38a_cp0_dst-jpg_p40x40&_nc_cat=111&ccb=1-7&_nc_sid=596444&_nc_ohc=WqmxoXVN4GcAX-KnJVb&_nc_ht=scontent-sjc3-1.xx&oh=00_AfABNxj7e3LwtOFdYW8WYG-ramzz9in_NLgK-AMXRF6HQg&oe=658B47B4",
      },
      "type": "User",
      "url": "https://www.facebook.com/LilacFestival",
    },
  ],
  "id": "719931529922611",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": {
      "latitude": 51.035320819142,
      "longitude": -114.0715755823,
    },
    "countryCode": "CA",
    "description": null,
    "id": "749222630104757",
    "name": "Lilac Festival",
    "type": "TEXT",
    "url": null,
  },
  "name": "4th Street Lilac Festival",
  "onlineDetails": null,
  "photo": {
    "id": "749222690104751",
    "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-6/334947163_707773884461245_8821128704004863167_n.jpg?stp=dst-jpg_s960x960&_nc_cat=107&ccb=1-7&_nc_sid=d8d9c5&_nc_ohc=WCQptInO58wAX-HCVLu&_nc_ht=scontent-sjc3-1.xx&oh=00_AfAwjEhJvzMiqATtjqTvEDjVOduUtCV2tuXMkTu_8jHYxg&oe=658C383A",
    "url": "https://www.facebook.com/photo/?fbid=749222690104751&set=gm.719931573255940",
  },
  "startTimestamp": 1685894400,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/719931529922611/",
  "usersResponded": 5942,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with a text location 1`] = `
{
  "description": "hbhjbjh",
  "endTimestamp": null,
  "formattedDate": "Tuesday, April 4, 2023 at 10:00 PM UTC-06",
  "hosts": [
    {
      "id": "pfbid0bGuAF5VRG3Azhcy3JUidKRgSMLco4iCTkspQnbmKVVo27ARnJJQrMUPTep4uFEMjl",
      "name": "Joe Smith",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t1.30497-1/143086968_2856368904622192_1959732218791162458_n.png?stp=cp0_dst-png_p40x40&_nc_cat=1&ccb=1-7&_nc_sid=2b6aad&_nc_ohc=CO5dz350V7MAX8i0KzV&_nc_ht=scontent-sjc3-1.xx&oh=00_AfD_xDy9YaWFINwTUZn2knsJ6Bop--w4jXw-4cYGZoL5_g&oe=65ADA0F8",
      },
      "type": "User",
      "url": "https://www.facebook.com/people/Joe-Smith/pfbid0bGuAF5VRG3Azhcy3JUidKRgSMLco4iCTkspQnbmKVVo27ARnJJQrMUPTep4uFEMjl/",
    },
  ],
  "id": "526262926343074",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": null,
    "countryCode": null,
    "description": null,
    "id": "1260045608271508",
    "name": "kbhbj",
    "type": "TEXT",
    "url": null,
  },
  "name": "Event to test",
  "onlineDetails": null,
  "photo": null,
  "startTimestamp": 1680670800,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/526262926343074/",
  "usersResponded": 1,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with a ticket URL & city location 1`] = `
{
  "description": "The Dark Eighties in Calgary: 1977-2020s Edition

Tickets at https://thedarkeightiesspecialedition.eventbrite.ca
and on Ticket Tailor at https://www.tickettailor.com/events/12xuproductions/904667

$20 on the door

///we play///
EBM I GOTH I INDUSTRIAL I ITALO DISCO I NEW BEAT
NEW ROMANTICS I SYNTH POP I DARK WAVE I MINIMAL WAVE I POST PUNK I CULT 80S HITS I DEATHROCK + MORE!

Friday, May 5th 
The Junction
10pm-2am 

DJs Nebulae Complex + Chameleon

This time, we're not ONLY playing 80s but also dark tunes from after the 80s + a few late 70s punk/post punk tunes! 

FB: @thedarkeighties
Instagram: @12xuevents
Join our group!
https://www.facebook.com/groups/darkeighties
",
  "endTimestamp": 1683360000,
  "formattedDate": "Friday, May 5, 2023 at 9:00 PM – 1:00 AM UTC-06",
  "hosts": [
    {
      "id": "100070821304084",
      "name": "12XU",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/410227062_382882167415824_4051646999230968301_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=104&ccb=1-7&_nc_sid=596444&_nc_ohc=CT1UYneHfKgAX_30IgG&_nc_ht=scontent-sjc3-1.xx&oh=00_AfDHe8xK98hN-dmYJr1b3tH2IQb9WfosGMaZX72JSr5Sdw&oe=658B7AA6",
      },
      "type": "User",
      "url": "https://www.facebook.com/12XUevents",
    },
    {
      "id": "100063904024919",
      "name": "The Dark Eighties",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/332078465_858485495251843_6558149897498817316_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=108&ccb=1-7&_nc_sid=596444&_nc_ohc=nhGFswOioisAX_NZcdD&_nc_ht=scontent-sjc3-1.xx&oh=00_AfBW7bioy_vdpqK2kVQaydlTIOfUClv9krm6Np4X-1_g2Q&oe=658B51E7",
      },
      "type": "User",
      "url": null,
    },
  ],
  "id": "1376686273147180",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": {
      "latitude": 51.05,
      "longitude": -114.06666666667,
    },
    "countryCode": "CA",
    "description": null,
    "id": "992250685521992",
    "name": "Calgary, Alberta, Canada",
    "type": "TEXT",
    "url": null,
  },
  "name": "The Dark Eighties: 1977-2023 Edition",
  "onlineDetails": null,
  "photo": {
    "id": "621131586693637",
    "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-6/337126422_218835007357788_3208832482586448057_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=d8d9c5&_nc_ohc=v6B1Y9VcHrwAX9KGLOP&_nc_ht=scontent-sjc3-1.xx&oh=00_AfC3AiyUU2HUgUAT4R8vWQRDoC5xaRaQz5xvfsp7rl0EPw&oe=658A5730",
    "url": "https://www.facebook.com/photo/?fbid=621131586693637&set=gm.1376686326480508",
  },
  "startTimestamp": 1683345600,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/1376686273147180/",
  "usersResponded": 423,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with a video cover 1`] = `
{
  "description": "💡 Kaip atrodys ateities universitetas? Kokius uždavinius kelsime ateities aukštajam mokslui? Kaip ir kokias asmenybes ugdysime? Kaip pritaikysime švietimo sistemą prie laukiančių technologijų pokyčių? Susitikime padiskutuoti su profesoriumi, Vilniaus universiteto rektoriumi, Valstybės pažangos tarybos nariu dr. Rimvydu Petrausku apie Lietuvos ateities švietimą ir pasidalinti, kokią viziją 2050 metams turime mes.  

Pokalbį moderuos VšĮ „Šiauliai plius“ direktorė Giedrė Brazlauskaitė.

📍 Renginys vyks Šiaulių apskrities Povilo Višinskio viešosios bibliotekos Konferencijų salėje, Aušros alėja 62, Šiauliai
  
❗️Renginys atviras visiems, tačiau prašome užsiregistruoti https://forms.office.com/e/yQVDMreN2C 

Daugiau informacijos apie „Lietuva 2050” – www.Lietuva2050.lt

Ateitį kurkime šiandien!   
",
  "endTimestamp": 1684333800,
  "formattedDate": "Wednesday, May 17, 2023 at 6:00 AM – 7:30 AM UTC+03",
  "hosts": [
    {
      "id": "100067786593384",
      "name": "Lietuva 2050",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/353748572_586062753663273_3803358940549831479_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=111&ccb=1-7&_nc_sid=596444&_nc_ohc=viK5PwuIonEAX8b9yt9&_nc_ht=scontent-sjc3-1.xx&oh=00_AfC_BcS5-5J6_Ys4iAUYPjh-D-1ob9JVIKxpq-6vYMBxKA&oe=658BFE91",
      },
      "type": "User",
      "url": "https://www.facebook.com/Lietuva2050",
    },
    {
      "id": "100039182298687",
      "name": "VU Šiaulių akademija",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/274600858_487344632966234_2522454326585058130_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=105&ccb=1-7&_nc_sid=596444&_nc_ohc=tE63EmxsiiUAX__M5nr&_nc_ht=scontent-sjc3-1.xx&oh=00_AfCcYShzWKb5TynrGqzaokyOQ3bDy7Q2Kgj2P4t4ciXloQ&oe=658A5FFC",
      },
      "type": "User",
      "url": "https://www.facebook.com/siauliu.akademija",
    },
    {
      "id": "100064306435250",
      "name": "Vilniaus universitetas / Vilnius University",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/274532730_5225887714128805_1147028878997655106_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=104&ccb=1-7&_nc_sid=596444&_nc_ohc=PLFWPQ1ML9kAX9SHeRQ&_nc_ht=scontent-sjc3-1.xx&oh=00_AfAcu1K7gP_BaK1xhIRObPnDJK9MpjB-De8nv3Hv-tz3lg&oe=658A4632",
      },
      "type": "User",
      "url": "https://www.facebook.com/VilniusUniversity",
    },
    {
      "id": "100064644461523",
      "name": "Šiaulių apskrities Povilo Višinskio viešoji biblioteka",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/342967593_283796257308792_6891719300998916370_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=102&ccb=1-7&_nc_sid=596444&_nc_ohc=h1cfv2iV2HIAX_D0cLs&_nc_ht=scontent-sjc3-1.xx&oh=00_AfAY5FogQoyrq1_CDPwXO7bBMUFXvXI_JVil2oq4jAJ-8A&oe=658AB827",
      },
      "type": "User",
      "url": "https://www.facebook.com/SAVB.info",
    },
  ],
  "id": "242861135088721",
  "isOnline": true,
  "location": null,
  "name": "Lietuva 2050: kokį vaidmenį atlieka švietimas, užtikrindamas valstybės ateitį?",
  "onlineDetails": {
    "type": "FB_LIVE",
    "url": null,
  },
  "photo": null,
  "startTimestamp": 1684328400,
  "ticketUrl": null,
  "timezone": "UTC+03",
  "url": "https://www.facebook.com/events/242861135088721/",
  "usersResponded": 123,
  "video": {
    "id": "2194658774256880",
    "thumbnailUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t15.5256-10/343286097_763205485254382_1688962917143675368_n.jpg?stp=dst-jpg_p960x960&_nc_cat=107&ccb=1-7&_nc_sid=1a7029&_nc_ohc=Gh5QLvOKxvUAX8tWZCY&_nc_ht=scontent-sjc3-1.xx&oh=00_AfBt-G78MMtfKkpGgOgquwsM4LB6oMAlRLxfKfxjlflhrQ&oe=658BA46B",
    "url": "https://www.facebook.com/Lietuva2050/videos/2194658774256880/",
  },
}
`;

exports[`E2E Generates the correct event data for an event with multiple hosts, a place location & tickets 1`] = `
{
  "description": "The #AEW Summer Canadian Tour concludes with #AEWCollision LIVE in Calgary, AB on Saturday, July 15 as part of Canada’s iconic Calgary Stampede at the Saddledome!

Tickets are ON SALE NOW!",
  "endTimestamp": null,
  "formattedDate": "Saturday, July 15, 2023 at 1:00 PM EDT",
  "hosts": [
    {
      "id": "100064709654009",
      "name": "All Elite Wrestling",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/335675194_2899374420207257_9101454388622372305_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=1&ccb=1-7&_nc_sid=596444&_nc_ohc=JdNpbfIc6vsAX_ngrPR&_nc_ht=scontent-sjc3-1.xx&oh=00_AfCDUNfK5KJlvFbGA_x7pVE-koDoI6CojE6fsl6lelnyQw&oe=658B44BB",
      },
      "type": "User",
      "url": "https://www.facebook.com/AEW",
    },
    {
      "id": "100063699336240",
      "name": "Stampede Ent. Inc.",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/294695496_453263513473623_3023392462933132753_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=101&ccb=1-7&_nc_sid=596444&_nc_ohc=ko17SulDWsQAX9eZSS3&_nc_ht=scontent-sjc3-1.xx&oh=00_AfCF_yLtuKYEPHucFjzmwLySL5Dk0XqTC2OtYkhdhy7iOg&oe=658A6B42",
      },
      "type": "User",
      "url": "https://www.facebook.com/StampedeEntInc",
    },
  ],
  "id": "941510027277450",
  "isOnline": false,
  "location": {
    "address": "1410 Stampede Trail SE",
    "city": {
      "id": "111983945494775",
      "name": "Calgary, AB",
    },
    "coordinates": {
      "latitude": 51.035629728479,
      "longitude": -114.05452196423,
    },
    "countryCode": "CA",
    "description": "The Calgary Stampede is a not-for-profit community organization that preserves and promotes our weste",
    "id": "104371842930883",
    "name": "Calgary Stampede",
    "type": "PLACE",
    "url": "https://facebook.com/calgarystampede",
  },
  "name": "All Elite Wrestling (AEW) Collision Calgary, Alberta Debut!",
  "onlineDetails": null,
  "photo": {
    "id": "1273089803342464",
    "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-6/348823734_2075221392674298_547668571002268793_n.jpg?stp=dst-jpg_p180x540&_nc_cat=107&ccb=1-7&_nc_sid=d8d9c5&_nc_ohc=7LrVOTRyU7wAX-wTdHY&_nc_ht=scontent-sjc3-1.xx&oh=00_AfBlM8IdxMuo6fr7jdCahU9HxLgPtdQeDqHBAK-abBSWLg&oe=658A65F8",
    "url": "https://www.facebook.com/AEW/photos/gm.977705193657933/1273089803342464/",
  },
  "startTimestamp": 1689451200,
  "ticketUrl": null,
  "timezone": "EDT",
  "url": "https://www.facebook.com/events/941510027277450/",
  "usersResponded": 598,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with no location 1`] = `
{
  "description": "Birželio 1 d., ketvirtadienį, 16 val. vyks virtualus renginys „#TAPKMOKYTOJU. Mokomojo dalyko pedagogika: istorija ir geografija“, kuriame dėstytojai, studentai, absolventai dalinsis savo įkvepiančiomis istorijomis, įžvalgomis apie studijų programą bei mokytojo darbą.

Mokomojo dalyko pedagogika: istorija ir geografija bakalauro programa vykdoma Kaune ir Vilniuje.

Registracija: https://forms.office.com/e/DvfJn8q27D",
  "endTimestamp": 1685629800,
  "formattedDate": "Thursday, June 1, 2023 at 6:00 AM – 7:30 AM UTC+03",
  "hosts": [
    {
      "id": "100064711685049",
      "name": "VDU Švietimo akademija",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/274685098_5567767706572475_1252348629032694585_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=109&ccb=1-7&_nc_sid=596444&_nc_ohc=CETm_EkMv3wAX9xCF9n&_nc_oc=AQl2k9LWV1It-BK38DmWk9mSPI82l_j8qNESm_TgQMbbGb9d3HdtKoujUZoD8MWeEyI&_nc_ht=scontent-sjc3-1.xx&oh=00_AfA3qBcMtRj5SEDdiTmJLv5rfHaIt8A_U_OWK9E3HyOdAg&oe=658B2C3B",
      },
      "type": "User",
      "url": "https://www.facebook.com/VDU.svietimo.akademija",
    },
  ],
  "id": "782998640138266",
  "isOnline": false,
  "location": null,
  "name": "Virtualus renginys „#TAPKMOKYTOJU. Mokomojo dalyko pedagogika: istorija ir geografija“ ",
  "onlineDetails": null,
  "photo": {
    "id": "6986078114741420",
    "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-6/349523504_596340745925274_3047478399487167752_n.jpg?stp=dst-jpg_s960x960&_nc_cat=110&ccb=1-7&_nc_sid=d8d9c5&_nc_ohc=3qzOwycqbqkAX8g0nXJ&_nc_ht=scontent-sjc3-1.xx&oh=00_AfAqHFb9ZLB_VTG4t9FnxIjrPUNnPZdJ_O1wE3cgHnGhzw&oe=658ABA22",
    "url": "https://www.facebook.com/VDU.svietimo.akademija/photos/gm.782998683471595/6986078114741420/",
  },
  "startTimestamp": 1685624400,
  "ticketUrl": null,
  "timezone": "UTC+03",
  "url": "https://www.facebook.com/events/782998640138266/",
  "usersResponded": 3,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an online event with a third-party URL 1`] = `
{
  "description": "",
  "endTimestamp": null,
  "formattedDate": "Friday, June 16, 2023 at 3:00 PM UTC-06",
  "hosts": [
    {
      "id": "pfbid0bGuAF5VRG3Azhcy3JUidKRgSMLco4iCTkspQnbmKVVo27ARnJJQrMUPTep4uFEMjl",
      "name": "Joe Smith",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t1.30497-1/143086968_2856368904622192_1959732218791162458_n.png?stp=cp0_dst-png_p40x40&_nc_cat=1&ccb=1-7&_nc_sid=2b6aad&_nc_ohc=CO5dz350V7MAX8i0KzV&_nc_ht=scontent-sjc3-1.xx&oh=00_AfD_xDy9YaWFINwTUZn2knsJ6Bop--w4jXw-4cYGZoL5_g&oe=65ADA0F8",
      },
      "type": "User",
      "url": "https://www.facebook.com/people/Joe-Smith/pfbid0bGuAF5VRG3Azhcy3JUidKRgSMLco4iCTkspQnbmKVVo27ARnJJQrMUPTep4uFEMjl/",
    },
  ],
  "id": "760928342374546",
  "isOnline": true,
  "location": null,
  "name": "Third party URL event",
  "onlineDetails": {
    "type": "THIRD_PARTY",
    "url": "https://www.example.com/hey",
  },
  "photo": null,
  "startTimestamp": 1686952800,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/760928342374546/",
  "usersResponded": 1,
  "video": null,
}
`;
